# uvt-scholarly

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  REUSE.toml  justfile  mkdocs.yml  pyproject.toml  requirements.txt  zensical.toml
.ci/: requirements-build.in  requirements-build.txt  requirements-test.txt
.github/workflows/: ci.yml
docs/: api.md  index.md  installation.md  justfile  mkdocs.yml  requirements.txt  usage.md
docs/css/: custom.css
docs/usage/: cs.md  math.md  scopus.md  wos.md
src/uvt_scholarly/: __init__.py  __main__.py  anzsrc.py  core.py  enrich.py  identifiers.py  importer.py  logging.py  merging.py  openalex.py  predatory.py  publication.py  uefiscdi.py  utils.py  wos.py
src/uvt_scholarly/export/: common.py  cs.py  math.py
src/uvt_scholarly/resources/: math.tpl.tex
src/uvt_scholarly/uefiscdi/: __init__.py  ais.py  common.py  rif.py  ris.py
src/wos_uefiscdi/: __main__.py  logging.py
tests/: test_anzsrc.py  test_core.py  test_enrich.py  test_identifiers.py  test_merging.py  test_predatory.py  test_publication.py  test_uefiscdi.py  test_wos.py
tests/data/: researcher.toml  savedrecs.bib  savedrecs.txt  savedrecs_cited_by.bib  savedrecs_cited_by.txt
