[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.10",
]

[project]
name = "uvt-scholarly"
version = "2026.1"
description = "Convert WoS and Scopus data to UEFISCDI and CNATDCU criteria verification sheets"
readme = "README.md"
license = "MIT"
maintainers = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
authors = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.28",
    "msoffcrypto-tool>=5",
    "openpyxl>=3.1",
    "platformdirs",
    "pyperclip>=1.9",
    "rich>=14",
    "titlecase>=2.4",
]
urls.Repository = "https://github.com/alexfikl/uvt-scholarly"
scripts."uvtscholarly" = "uvt_scholarly.__main__:main"

[dependency-groups]
dev = [ "pyproject-fmt", "uv" ]
test = [
    "pytest",
    "reuse",
    "ruff",
    "ty",
    "typos",
]
docs = [ "sphinx>=6", "sphinx-book-theme" ]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    ".ci",
    "docs/_build",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/uvt_scholarly",
]

[tool.ruff]
line-length = 88

preview = true
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # flake8
    "F",   # flake8
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # flake8
]
lint.ignore = [
    "A005",    # shadowing-builtin-module
    "E402",    # module-import-not-at-top-of-file
    "ISC001",  # single-line-implicit-string-concatenation
    "N803",    # non-lowercase-argument
    "N806",    # non-lowercase-variable-in-function
    "PLC0415", # import-outside-top-level
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-variables
    "PLR0915", # too-many-statements
    "PLR0917", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    "S102",    # exec-builtin
]
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-quotes.multiline-quotes = "double"
lint.isort.known-first-party = [
    "uvt_scholarly",
]
lint.isort.required-imports = [
    "from __future__ import annotations",
]

[tool.typos.default]
extend-ignore-re = [
    "(?Rm)^.*#\\s*spell:\\s*disable$",
]

[tool.typos.files]
extend-exclude = [
    "tests/data",
]

[tool.pytest.ini_options]
testpaths = "tests"
log_cli = true
log_cli_level = "INFO"
addopts = [
    "-rswx",
    "--durations=25",
    "--capture=no",
    "--verbose",
]
